	  
2022-02-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asgb/gbadr.c,
	  sdas/asgb/gbmch.c,
	  sdas/asrab/rabadr.c,
	  sdas/asrab/rabmch.c:
	  Merge error messages from upstream ASxxxx 5.40.
	  Add a few for extensions/custom ports.

2022-02-22 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/SDCC.lex,
	  sdcc/src/mos6502/main.c:
	  Add __zp keyword to the mos6502 port.
	* sdcc/src/SDCCmain.c,
	  sdcc/src/mos6502/main.c,
	  sdcc/device/lib/mos6502/crt0.s,
	  sdcc/device/lib/mos6502/_strcpy.s,
	  sdcc/device/lib/mos6502/_strcmp.s,
	  sdcc/device/lib/mos6502/_setjmp.c,
	  sdcc/device/lib/mos6502/_mullong.s,
	  sdcc/device/lib/mos6502/_mulint.s,
	  sdcc/device/lib/mos6502/_divulong.s,
	  sdcc/device/lib/mos6502/_divuint.s,
	  sdcc/device/lib/mos6502/__memcpy.s,
	  sdcc/device/lib/mos6502-stack-auto/crt0.s,
	  sdcc/device/lib/mos6502-stack-auto/_setjmp.c:
	  Rename linker segments.
	* sdcc/src/mos6502/gen.h:
	  Remove unused anonymous enum.
	* sdcc/sdas/as6500/r65pst.c:
	  Prepeare for additional asxxxx upstream merge.

2022-02-22 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/sdas/asxxsrc/asxxxx.h,
	  sdcc/sdas/asxxsrc/assym.c,
	  sdcc/sdas/asxxsrc/assubr.c,
	  sdcc/sdas/asxxsrc/asmcro.c,
	  sdcc/sdas/asxxsrc/asmain.c,
	  sdcc/sdas/asxxsrc/aslist.c,
	  sdcc/sdas/asxxsrc/aslex.c,
	  sdcc/sdas/asxxsrc/asexpr.c,
	  sdcc/sdas/asxxsrc/asdata.c:
	  Several updates from upstream asxxxx 5.40
	* sdcc/sdas/aasz80/z80pst.c:
	  Use I_CODE in S_INCL entry instead of 0.
	* sdcc/sdas/as6502/r65pst.c,
	  sdcc/sdas/as6502/r65mch.c,
	  sdcc/sdas/as6502/r65adr.c,
	  sdcc/sdas/as6502/r6500.h:
	  Add .incbin, .define, .undefine, .ifdef and .ifndef to the 6502 assembler.
  	* sdcc/sdas/as6808/m6808.h,
	  sdcc/sdas/as6808/m08pst.c,
	  sdcc/sdas/as6808/m08mch.c,
	  sdcc/sdas/as6808/m08adr.c:
	  Add .incbin hc08/s08 assembler.
  	* sdcc/sdas/asstm8/stm8pst.c:
	  Use I_CODE in S_INCL entry instead of 0.
	  
2022-02-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph.def: